--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,5 +18,28 @@
   "REMEMBER_ME": "Remember me",
   "FORGOT_PWD": "Forgot your password?",
   "FOOTER_CREATED_BY": "Created by Imatia Innovation",
-  "FOOTER_RIGHTS": "All rights reserved"
+  "FOOTER_RIGHTS": "All rights reserved",
+  "CUSTOMERS": "Customers",
+  "APP_TITLE": "Bank Manager",
+  "VERSION": "Version",
+  "EXAMPLE_LOGIN_INFO": "Use this user and password for login",
+  "USERNAME": "Username",
+  "PASSWORD": "Password",
+  "LOGIN": "Login",
+  "LOGOUT": "Logout",
+  "VIEW": "Views",
+  "HOME": "Home",
+  "ERROR_REQUIRED_FIELD": "Field is required",
+  "ERROR_MIN_LENGTH_REQUIRED": "The value length entered must be at least 8 characters.",
+  "ERROR_SESSION_EXPIRED": "Session expired.",
+  "ERROR_USER_REQUIRED": "Incorrect username.",
+  "ERROR_PASS_REQUIRED": "Incorrect password.",
+  "ERROR_USER_PASS_INCORRECT": "Invalid username or password.",
+  "CUSTOMERS": "Customers",
+  "ID": "Id.",
+  "NAME": "Name",
+  "SURNAME": "Surname",
+  "STARTDATE": "Start date",
+  "EMAIL": "Email",
+  "PHOTO": "Photo"
 }
