--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,6 @@
 {
-  "APP_TITLE": "Quickstart",
+ 
+  "APP_TITLE": "Bank Manager",
   "VERSION": "Version",
   "EXAMPLE_LOGIN_INFO": "Use this user and password for login",
   "USERNAME": "Username",
@@ -18,5 +19,36 @@
   "REMEMBER_ME": "Remember me",
   "FORGOT_PWD": "Forgot your password?",
   "FOOTER_CREATED_BY": "Created by Imatia Innovation",
-  "FOOTER_RIGHTS": "All rights reserved"
+  "FOOTER_RIGHTS": "All rights reserved",
+  "CUSTOMER_PERSONAL_INFORMATION": "Personal Information",
+  "CUSTOMERID": "Customer Id.",
+  "PHONE": "Phone",
+  "CUSTOMERTYPEID": "Customer type",
+  "ADDRESS": "Address",
+  "LONGITUDE": "Longitude",
+  "LATITUDE": "Latitude",
+  "COMMENTS": "Comments",
+  "EMPLOYEES": "Employees",
+  "EMPLOYEEID": "Employee Id.",
+  "EMPLOYEETYPEID": "Employee type",
+  "EMPLOYEENAME": "Name",
+  "EMPLOYEESURNAME": "Surname",
+  "EMPLOYEEADDRESS": "Address",
+  "EMPLOYEECOMMENTS": "Comments",
+  "EMPLOYEESTARTDATE": "Start date",
+  "EMPLOYEEPHOTO": "Photo",
+  "EMPLOYEEEMAIL": "Mail",
+  "OFFICEID": "Office",
+  "EMPLOYEEPHONE": "Phone",
+  "EMPLOYEE_PERSONAL_INFORMATION": "Employee details",
+  "BRANCHES": "Branches",
+  "ACCOUNTS": "Accounts",
+  "ENTITYID": "Entity",
+  "CDID": "CD",
+  "ANID": "Account",
+  "ENDDATE": "End date",
+  "INTERESRATE": "% Interest",
+  "ACCOUNTTYP": "Account type",
+  "ACCOUNTNUMBER": "Account number"
+  
 }
