--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,5 +1,5 @@
 {
-  "APP_TITLE": "JEE seed",
+  "APP_TITLE": "Bank Manager",
   "VERSION": "Versión",
   "EXAMPLE_LOGIN_INFO": "Usuario y contraseña de ejemplo",
   "USERNAME": "Usuario",
@@ -18,5 +18,37 @@
   "REMEMBER_ME": "Recuérdame",
   "FORGOT_PWD": "¿Has olvidado tu contraseña?",
   "FOOTER_CREATED_BY": "Creado por Imatia Innovation",
-  "FOOTER_RIGHTS": "Todos los derechos reservados"
+  "FOOTER_RIGHTS": "Todos los derechos reservados",
+  "CUSTOMERS": "Clientes",
+  "CUSTOMER_PERSONAL_INFORMATION": "Información personal",
+  "CUSTOMERID": "Id. cliente",
+  "PHONE": "Teléfono",
+  "CUSTOMERTYPEID": "Tipo cliente",
+  "ADDRESS": "Dirección",
+  "LONGITUDE": "Longitud",
+  "LATITUDE": "Latitud",
+  "COMMENTS": "Comentarios",
+  "EMPLOYEES": "Empleados",
+  "EMPLOYEEID": "Id. Empleado",
+  "EMPLOYEETYPEID": "Tipo de empleado",
+  "EMPLOYEENAME": "Nombre",
+  "EMPLOYEESURNAME": "Apellidos",
+  "EMPLOYEEADDRESS": "Dirección",
+  "EMPLOYEECOMMENTS": "Comentarios",
+  "EMPLOYEESTARTDATE": "Fecha de inicio",
+  "EMPLOYEEPHOTO": "Fotografía",
+  "EMPLOYEEEMAIL": "Correo",
+  "OFFICEID": "Oficina",
+  "EMPLOYEEPHONE": "Teléfono",
+  "EMPLOYEE_PERSONAL_INFORMATION": "Detalles empleado",
+  "BRANCHES": "Sucursales",
+  "ACCOUNTS": "Cuentas",
+  "ACCOUNTID": "Id.", 
+  "ENTITYID": "Entidad",
+  "CDID": "DC",
+  "ANID": "Cuenta",
+  "ENDDATE": "Fecha fin",
+  "INTERESRATE": "% interés",
+  "ACCOUNTTYP": "Tipo de cuenta",
+  "ACCOUNTNUMBER": "Nº cuenta"
 }
